<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- <TextView
         android:id="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textname"
        app:layout_constraintRight_toLeftOf="@id/btn"/>-->
    <!-- 以上这4个属性相当于相对布局里面的 android:layout_centerInParent="true" -->


    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/textview_name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dimen_tv_20"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv"
        app:layout_constraintRight_toLeftOf="@id/btn3"
        android:text="@string/btn2_name" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3_name"
        app:layout_constraintTop_toBottomOf="@id/tv"
        app:layout_constraintLeft_toRightOf="@id/btn2" />


</android.support.constraint.ConstraintLayout>
