<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <ImageView
        android:id="@+id/img_content"
        android:layout_width="140dp"
        android:layout_height="86dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/img_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/tv_sample_title"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_16"
        app:layout_constraintLeft_toRightOf="@id/img_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_content" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/dark_gray"
        android:text="@string/tv_sample_time"
        android:textSize="@dimen/textsize_12"
        app:layout_constraintLeft_toRightOf="@id/img_content"
        app:layout_constraintBottom_toBottomOf="@id/img_content"
        android:layout_marginBottom="8dp" />


    <!--下面是3张图片-->

    <ImageView
        android:id="@+id/img_hangzhou1"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/img_hangzhou1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_content" />

    <ImageView
        android:id="@+id/img_hangzhou2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/img_hangzhou2"
        app:layout_constraintLeft_toRightOf="@id/img_hangzhou1"
        app:layout_constraintTop_toTopOf="@id/img_hangzhou1" />

    <ImageView
        android:id="@+id/img_hangzhou3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/img_hangzhou3"
        app:layout_constraintLeft_toRightOf="@id/img_hangzhou1"
        app:layout_constraintBottom_toBottomOf="@id/img_hangzhou1" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btn_tab1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/btn_tab1_name"
        android:textSize="@dimen/textsize_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_tab2" />

    <Button
        android:id="@+id/btn_tab2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/btn_tab2_name"
        android:textSize="@dimen/textsize_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_tab1"
        app:layout_constraintRight_toLeftOf="@id/btn_tab3" />

    <Button
        android:id="@+id/btn_tab3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/btn_tab3_name"
        android:textSize="@dimen/textsize_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_tab2"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
